--- a/50-default.conf
+++ b/50-default.conf
@@ -6,4 +6,5 @@ $ModLoad imudp
 $UDPServerRun 514
 $ModLoad imtcp
 $InputTCPServerRun 514
+input(type="imuxsock" Socket="/var/run/loggly/log" CreatePath="on")
 
